z-index issue
z-index issue

--- a/src/assets/scss/components/_custom.scss
+++ b/src/assets/scss/components/_custom.scss
@@ -78,7 +78,7 @@ hr {
 .title-bar {
   position: fixed;
   width: 100%;
-  z-index: 3;
+  z-index: 10;
   padding-top: -10px;
 
 }
@@ -86,6 +86,7 @@ hr {
 .top-bar-left
   {
     margin: rem-calc(0 0 0 10);
+
   }
 
   .top-bar-right
